510-labs/020-ha-hello/kubernetes/manifest/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    acm: acm-ha-hello
  name: acm-ha-hello
