510-labs/020-ha-hello/kubernetes/manifest/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    acm: acm-ha-hello
    app: hello
  name: hello
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello
  template:
    metadata:
      labels:
        app: hello
    spec:
      containers:
      - command:
        - "/hello"
        - "--port=8080"
        - "--enableRiskyFeature=$(ENABLE_RISKY)"
        image: monopole/hello:1
        name: monopole
        ports:
        - containerPort: 8080
