510-labs/020-ha-hello/kubernetes/manifest/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    acm: acm-ha-hello
    app: hello
  name: hello
spec:
  selector:
    app: hello
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
