510-labs/020-ha-hello/kubernetes/manifest/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    acm: acm-ha-hello
    app: hello
  name: hello
spec:
  host: "<changeme>"
  port:
    targetPort: 8080
  to:
    kind: Service
    name: hello
